Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124898

[Reg 6.2 -> 6.5] Qt.uiLanguage does not work for locale changes

XMLWordPrintable

    • 9a11273b7 (dev), 8352306cd (6.8), 2003c3612 (6.7), 8eb644c2c (tqtc/lts-6.5), f3fc7b210 (6.8.0), a30c1bcd3 (dev), e5c1d02ac (6.8), 313b0ae8c (tqtc/lts-6.5), 595f2126f (tqtc/lts-6.5.7), 8230c7d7a (dev), 6a785ce90 (dev), 1f2ab4674 (dev), fbdeec709 (6.8)

      please see the attached demo.

      change from "en" to "en_AU", the text won't retranslated.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            jiu shanheng jiu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: